# TAMLE_Evaluation

./: .gitignore  .readthedocs.yml  LICENSE.md  MANIFEST.in  README.md  dockerfile  env.yml  install_housepred.sh  launch_docs.sh  pyproject.toml  setup.cfg  setup.py  sphinx_docs.sh
deploy/: requirements.txt
docs/source/: conf.py  house_price_prediction.rst  index.rst
src/: data_prep.py  ingest_data.py  main.py  score.py  train.py
src/housepred/: api.py  data_prep.py  ingest_data.py  main.py  score.py  train.py
tests/functional_tests/: test_data_prep.py  test_ingest_data.py  test_installation.py  test_score.py  test_train.py
tests/unit_tests/: test_data_ingestion.py  test_scripts.py
