[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Housing_Prediction"
version = "0.0.1"
authors = [
  { name="Pushvinder Kumat", email="pushvinder.rohta@tigeranalytics.com" },
]
description = "Package for Housing Prediction"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Tiger Analytics License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pushvinderrohtagi/mle_training"
"Bug Tracker" = "https://github.com/pushvinderrohtagi/mle_training/issues"